--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -12,6 +12,8 @@
 #  question       :string
 #  created_at     :datetime         not null
 #  updated_at     :datetime         not null
+#  category_id    :integer
+#  quiz_id        :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
