--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -12,6 +12,13 @@
 #  correct5   :boolean
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  profile_id :integer
+#  question1  :integer
+#  question2  :integer
+#  question3  :integer
+#  question4  :integer
+#  question5  :integer
+#  user       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
