fix tests for quiz testing

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -34,7 +34,7 @@ one:
     correct2: false
     correct3: false
     correct4: false
-    correct5: false
+    #correct5: nil
     question1: 1
     question2: 2
     question3: 3
