--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -19,7 +19,7 @@ one:
   first_name: MyString
   last_name: MyString
   birthday: 2015-03-30
-  password: MyString
+  password_digest: MyString
   email: MyString
   reward_amount: 1
 
@@ -27,6 +27,6 @@ two:
   first_name: MyString
   last_name: MyString
   birthday: 2015-03-30
-  password: MyString
+  password_digest: MyString
   email: MyString
   reward_amount: 1
