test fixture update

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -34,6 +34,7 @@ one:
     correct2: false
     correct3: false
     correct4: false
+    profile_id: 1
     #correct5: nil
     question1: 1
     question2: 2
